# omori-patcher

./: .gitignore  .gitmodules  CMakeLists.txt  Chowdren.exe.h  ChowdrenNoDyB.1337  Chowdren_patches.1337  README.md  build_cmake.bat  ml.nim  ml.nimble  omori-patcher.sln  patch.asm  stdlib.js  structs.h
libs/lib_detours/: CMakeLists.txt
ml/: fs.nim  js.nim  ml.nim  modloader.nim  olid.nim  utils.nim
omori-patcher/: CMakeLists.txt  Chowdren.exe.h  consts.cpp  consts.h  dllmain.cpp  framework.h  fs_overlay.cpp  fs_overlay.h  js.cpp  js.h  mem.cpp  mem.h  mod.h  modloader.cpp  modloader.h  omori-patcher.vcxproj  pch.h  quickjs.h  rpc.cpp  rpc.h  utils.cpp  utils.h
